--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -485,7 +485,7 @@
     <string name="settings">Ajustaments</string>
     <string name="purchase_simple_thank_you">Compra Simple Thank You</string>
     <string name="customize_colors">Canviar colors</string>
-    <string name="customize_colors_locked">Canviar colors (Locked)</string>
+    <string name="customize_colors_locked">Canviar colors (Bloquejat)</string>
     <string name="customize_widget_colors">Personalitza els colors de widgets</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
