adding a new string and icon for viewing contact details

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear accès directe</string>
     <string name="add_number_to_contact">Afegeix el número als contactes</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
