--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Tulosta</string>
     <string name="create_shortcut">Luo pikakuvake</string>
     <string name="add_number_to_contact">Lisää numero yhteystietoon</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Järjestä</string>
