--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Imprimer</string>
     <string name="create_shortcut">Créer un raccourci</string>
     <string name="add_number_to_contact">Ajouter un numéro aux contacts</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
