--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -269,6 +269,7 @@
     <string name="print">Cetak</string>
     <string name="create_shortcut">Buat pintasan</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Urutkan menurut</string>
