--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Stampa</string>
     <string name="create_shortcut">Crea scorciatoia</string>
     <string name="add_number_to_contact">Aggiungi numero al contatto</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
