--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -269,6 +269,7 @@
     <string name="print">印刷</string>
     <string name="create_shortcut">ショートカットを作成</string>
     <string name="add_number_to_contact">コンタクトに番号を追加</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
