--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -273,6 +273,7 @@
     <string name="print">Drukuj</string>
     <string name="create_shortcut">Create shortcut</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortuj według parametru:</string>
