--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Criar atalho</string>
     <string name="add_number_to_contact">Adicionar número a um contacto existente</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
