--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -276,6 +276,7 @@
     <string name="print">Печать</string>
     <string name="create_shortcut">Создать ярлык</string>
     <string name="add_number_to_contact">Добавить номер контакту</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
