--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Yazdır</string>
     <string name="create_shortcut">Kısayol oluştur</string>
     <string name="add_number_to_contact">Kişiye numara ekle</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
