--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Друкувати</string>
     <string name="create_shortcut">Створити посилання</string>
     <string name="add_number_to_contact">Додати номер до контактів</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортувати за</string>
