--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -269,6 +269,7 @@
     <string name="print">打印</string>
     <string name="create_shortcut">创建快捷方式</string>
     <string name="add_number_to_contact">添加号码至联系人</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
