--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -270,6 +270,7 @@
     <string name="print">طباعة</string>
     <string name="create_shortcut">إنشاء أختصار</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">فرز حسب</string>
