--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -276,6 +276,7 @@
     <string name="print">Tisk</string>
     <string name="create_shortcut">Vytvořit zkratku</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
