--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -284,6 +284,7 @@
     <string name="print">Argraffu</string>
     <string name="create_shortcut">Create shortcut</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trefnu yn ôl</string>
