--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Udskriv</string>
     <string name="create_shortcut">Opret genvej</string>
     <string name="add_number_to_contact">Føj nummer til kontakt</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter efter</string>
