--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Drucken</string>
     <string name="create_shortcut">Verknüpfung erstellen</string>
     <string name="add_number_to_contact">füge Nummer zu Kontakt hinzu</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
