--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear atajo</string>
     <string name="add_number_to_contact">Anadir el número a contactos</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
