--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Inprimatu</string>
     <string name="create_shortcut">Sortu lasterbidea</string>
     <string name="add_number_to_contact">Gehitu zenbakia kontaktura</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenatze-irizpidea</string>
