--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">הדפס</string>
     <string name="create_shortcut">צור קיצור דרך</string>
     <string name="add_number_to_contact">הוסף מספר לאנשי קשר</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">מיין לפי</string>
