--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Spausdinti</string>
     <string name="create_shortcut">Sukurti nuorodą</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rūšiuoti pagal</string>
