--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -272,6 +272,7 @@
     <string name="print">Skriv ut</string>
     <string name="create_shortcut">Opprett snarvei</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
