--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -276,6 +276,7 @@
     <string name="print">Tlačiť</string>
     <string name="create_shortcut">Vytvoriť skratku</string>
     <string name="add_number_to_contact">Priradiť číslo kontaktu</string>
+    <string name="view_contact_details">Zobraziť detaily kontaktu</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
