--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -271,6 +271,7 @@
     <string name="print">Штампај</string>
     <string name="create_shortcut">Create shortcut</string>
     <string name="add_number_to_contact">Add number to contact</string>
+    <string name="view_contact_details">View contact details</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортирај према</string>
