--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -272,7 +272,7 @@
     <string name="print">Printen</string>
     <string name="create_shortcut">Snelkoppeling maken</string>
     <string name="add_number_to_contact">Nummer aan contact toevoegen</string>
-    <string name="view_contact_details">View contact details</string>
+    <string name="view_contact_details">Contactgegevens</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
