--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -272,7 +272,7 @@
     <string name="print">Εκτύπωση</string>
     <string name="create_shortcut">Δημιουργία συντόμευσης</string>
     <string name="add_number_to_contact">Προσθήκη αριθμού επαφής</string>
-    <string name="view_contact_details">View contact details</string>
+    <string name="view_contact_details">Προβολή λεπτομερειών επαφής</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
@@ -486,7 +486,7 @@
     <string name="settings">Ρυθμίσεις</string>
     <string name="purchase_simple_thank_you">Αγοράστε το \"Απλά Σας ευχαριστώ\"</string>
     <string name="customize_colors">Προσαρμογή χρωμάτων</string>
-    <string name="customize_colors_locked">Προσαρμογή χρωμάτων (Locked)</string>
+    <string name="customize_colors_locked">Προσαρμογή χρωμάτων (Κλειδωμένο)</string>
     <string name="customize_widget_colors">Προσαρμογή χρωμάτων widget</string>
     <string name="use_english_language">Χρήση γλώσσας English</string>
     <string name="show_hidden_items">Εμφάνιση κρυφών στοιχείων</string>
