adding 2 more icons and strings for calling from SIM 1 and 2

--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -273,6 +273,8 @@
     <string name="create_shortcut">Δημιουργία συντόμευσης</string>
     <string name="add_number_to_contact">Προσθήκη αριθμού επαφής</string>
     <string name="view_contact_details">Προβολή λεπτομερειών επαφής</string>
+    <string name="call_from_sim_1">Call from SIM 1</string>
+    <string name="call_from_sim_2">Call from SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
