--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -273,6 +273,8 @@
     <string name="create_shortcut">Luo pikakuvake</string>
     <string name="add_number_to_contact">Lisää numero yhteystietoon</string>
     <string name="view_contact_details">View contact details</string>
+    <string name="call_from_sim_1">Call from SIM 1</string>
+    <string name="call_from_sim_2">Call from SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Järjestä</string>
