--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -273,6 +273,8 @@
     <string name="create_shortcut">Crea scorciatoia</string>
     <string name="add_number_to_contact">Aggiungi numero al contatto</string>
     <string name="view_contact_details">View contact details</string>
+    <string name="call_from_sim_1">Call from SIM 1</string>
+    <string name="call_from_sim_2">Call from SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
