--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -277,6 +277,8 @@
     <string name="create_shortcut">Vytvoriť skratku</string>
     <string name="add_number_to_contact">Priradiť číslo kontaktu</string>
     <string name="view_contact_details">Zobraziť detaily kontaktu</string>
+    <string name="call_from_sim_1">Zavolať zo SIM 1</string>
+    <string name="call_from_sim_2">Zavolať zo SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
