--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -273,8 +273,8 @@
     <string name="create_shortcut">Snelkoppeling maken</string>
     <string name="add_number_to_contact">Nummer aan contact toevoegen</string>
     <string name="view_contact_details">Contactgegevens</string>
-    <string name="call_from_sim_1">Call from SIM 1</string>
-    <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="call_from_sim_1">Met SIM 1 bellen</string>
+    <string name="call_from_sim_2">Met SIM 2 bellen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
