--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -305,7 +305,7 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Res želite nadaljevati s tem izborom?</string>
-    <string name="deletion_confirmation">Res želite izbrisati \'%s\'?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <!-- Are you sure you want to delete 5 items? -->
     <string name="move_to_recycle_bin_confirmation">Res želite \'%s\' premakniti v Koš?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
     <string name="are_you_sure_delete">Res želite izbrisati ta element?</string>
     <string name="are_you_sure_recycle_bin">Res želite premakniti ta element v Koš?</string>
@@ -900,4 +900,6 @@
 
     <!-- Description of our developer profile on Google Play, it can have max 140 characters -->
     <string name="developer_description">A group of simple, open source Android apps with customizable widgets, without ads and unnecessary permissions.</string>
+    <string name="deletion_confirmation">Res želite izbrisati \'%s\'?</string>
+    <string name="deletion_confirmation_with_size">Res želite izbrisati \'%s\'? (%s MB)</string>
 </resources>
