Update strings.xml español
Some tiny corrections on the licenses

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -807,7 +807,7 @@
     <string name="cropper_title">Android Image Cropper (Recortador y rotador de imágenes)</string>
     <string name="rtl_viewpager_title">RtlViewPager (Desplazamiento de izquierda a derecha)</string>
     <string name="joda_title">Joda-Time (Remplazo a la fecha de Java)</string>
-    <string name="stetho_title">Stetho (Debugger de bases de datos)</string>
+    <string name="stetho_title">Stetho (Depurador de bases de datos)</string>
     <string name="otto_title">Otto (Bus de eventos)</string>
     <string name="photoview_title">PhotoView (GIFs con zoom)</string>
     <string name="pattern_title">PatternLockView (Protección con patrón)</string>
@@ -818,7 +818,7 @@
     <string name="espresso_title">Espresso (Auxiliar de pruebas)</string>
     <string name="gson_title">Gson (Convertidor de JSON)</string>
     <string name="leak_canary_title">Leak Canary (Detector de falta de memoria)</string>
-    <string name="number_picker_title">Selector de número (Selector de número personalizable)</string>
+    <string name="number_picker_title">Number Picker (Selector de número personalizable)</string>
     <string name="exoplayer_title">ExoPlayer (Reproductor de video)</string>
     <string name="panorama_view_title">VR Panorama View (Mostrador de panoramas)</string>
     <string name="sanselan_title">Apache Sanselan (Lector de metadatos de imagen)</string>
