--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -272,9 +272,9 @@
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear accès directe</string>
     <string name="add_number_to_contact">Afegeix el número als contactes</string>
-    <string name="view_contact_details">View contact details</string>
-    <string name="call_from_sim_1">Call from SIM 1</string>
-    <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="view_contact_details">Veure els detalls de contacte</string>
+    <string name="call_from_sim_1">Truca des de la SIM 1</string>
+    <string name="call_from_sim_2">Truca des de la SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
