--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -272,9 +272,9 @@
     <string name="print">Imprimir</string>
     <string name="create_shortcut">Crear atajo</string>
     <string name="add_number_to_contact">Anadir el número a contactos</string>
-    <string name="view_contact_details">View contact details</string>
-    <string name="call_from_sim_1">Call from SIM 1</string>
-    <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="view_contact_details">Ver detalles de contacto</string>
+    <string name="call_from_sim_1">Llamar desde SIM 1</string>
+    <string name="call_from_sim_2">Llamar desde SIM 2</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
